objects/CurriculumVitae__c.object
<CustomObject>
    <description>Curriculum Vita or Resume of candidate</description>
    <fields>
        <fullName>Applications__c</fullName>
        <label>Applications</label>
        <picklist>
            <picklistValues>
                <fullName>JIT Resources (Manufacturing ERP System owned by Fourth Shift)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si-Fi Salesforce App (Business Rules Processing Engine owned by ORIAC Solutions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIA (Insurance Application owned by TIA Technology</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CandidateName__c</fullName>
        <formula>Candidate__r.FirstName + &apos; &apos; + Candidate__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Curriculum_Vitae</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MastHeading__c</fullName>
        <label>Mast Heading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Methodologies__c</fullName>
        <label>Methodologies</label>
        <picklist>
            <picklistValues>
                <fullName>Agile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterfall</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SkillSet__c</fullName>
        <globalPicklist>GlobalSkillSetValues</globalPicklist>
        <label>Skill Set</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <description>Subtitle for CV which would typically be the role/roles of the CV candidate</description>
        <inlineHelpText>Subtitle for CV which would typically be the role/roles of the CV candidate</inlineHelpText>
        <label>Subtitle</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <description>Summary or synopsis of the candidate</description>
        <label>Synopsis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Curriculum Vitae</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CandidateName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CV-{YYYY}{MM}-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Curriculum Vitae</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>